--- a/demo/app/basic/basic.component.html
+++ b/demo/app/basic/basic.component.html
@@ -1,3 +1,4 @@
 <div class="container">
-    <div class="draggable-element" triDraggable>I'm dragging</div>
+    <div class="draggable-element" triDraggable [triHasSnapshot]="true" (triDragStart)="triDragStart($event)"
+        (triDragOver)="triDragOver($event)" (triDragEnd)="triDragEnd($event)">I'm dragging</div>
 </div>
