--- a/demo/app/basic/basic.component.html
+++ b/demo/app/basic/basic.component.html
@@ -1,4 +1,4 @@
 <div class="container">
-    <div class="draggable-element" triDraggable [triHasSnapshot]="true" (triDragStart)="triDragStart($event)"
+    <div class="draggable-element" #draggableElement triDraggable [triHasSnapshot]="true" [triHasSnapshot]="true" (triDragStart)="triDragStart($event)"
         (triDragOver)="triDragOver($event)" (triDragEnd)="triDragEnd($event)">I'm dragging</div>
 </div>
