--- a/demo/styles.scss
+++ b/demo/styles.scss
@@ -3,3 +3,14 @@ body, div {
     margin: 0;
     padding: 0;
 }
+
+@import '@angular/cdk/overlay-prebuilt.css';
+@import './app/app.component.scss';
+@import '../packages/triton/src/style.scss';
+
+.triton-snapshot-container {
+    .draggable-element {
+        position: initial;
+        transform: none;
+    }
+}
