--- a/packages/triton/src/style.scss
+++ b/packages/triton/src/style.scss
@@ -1,3 +1,6 @@
-.triton-snapshot-container {
-    
+.triton-draggable-origin {
+    outline: none;
+}
+.drag-and-drop-target-active {
+    opacity: 0.5;
 }
